# may-weather

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-pages.yml  refresh-data.yml
site/: app.js  index.html  styles.css
site/data/: history.json  latest.json  meta.json
src/forecast_pipeline/: __init__.py  cli.py  config.py  fetcher.py  models.py  scoring.py  sources.py  storage.py
src/forecast_pipeline/adapters/: base.py  catalog.py  html_payloads.py  html_regions.py  parsers_remote_a.py  parsers_remote_b.py  parsers_remote_com.py  source_forecast_build.py  sources.py
tests/: test_adapters.py  test_pipeline_target.py  test_public_surface.py  test_scoring.py  test_storage.py
